feat(toDoList): add btn-edit-cancel and btn-edit-confirm, add editTodo and deleteTodo functions

--- a/frontend-assignments/toDoList.html
+++ b/frontend-assignments/toDoList.html
@@ -12,14 +12,17 @@
     <div id="todolist-container">
         <h1>Aplikasi Todo&nbsp;List</h1>
         <form>
-            <input id="todolist-input" type="text" name="todo" placeholder="Tambahkan todo baru..."><button id="btn-addtodo" type="button" aria-label="tambah todo"><i class="fas fa-plus" aria-hidden="true"></i></button>
+            <input id="todolist-input" type="text" name="todo" placeholder="Tambahkan todo baru...">
+            <button id="btn-edit-cancel" type="button" class="active hide" aria-label="cancel edit"><i class="fas fa-x" aria-hidden="true"></i></button>
+            <button id="btn-edit-confirm" type="button" class="active hide" aria-label="confirm edit"><i class="fas fa-check" aria-hidden="true"></i></button>
+            <button id="btn-addtodo" type="button" aria-label="tambah todo"><i class="fas fa-plus" aria-hidden="true"></i></button>
         </form>
         <ul id="todo-entry-container">
             <!-- todo-entries are inserted by script-->
         </ul>
         <div class="todo-credit">
             <p>Ini adalah <a href="https://todolist.nuraskiah.xyz/" target="_blank" rel="noreferrer"><strong>tugas&nbsp;latihan</strong></a> bersama Codepolitan.</p>
-            <a href="#" class="btn-link">GitHub</a>
+            <a href="https://github.com/idlionora/learning-to-code/tree/main/frontend-assignments" class="btn-link" target="_blank">GitHub</a>
         </div>
     </div>
     <script src="./toDoList.js"></script>
