--- a/advanced-frontend-lessons/tailwind-css/public/portfolio.html
+++ b/advanced-frontend-lessons/tailwind-css/public/portfolio.html
@@ -1,18 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belajar Tailwind</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="w-screen mx-auto px-4 h-8">Navigation Bar</nav>
-    <section>About Me</section>
-    <section>Skill</section>
-    <section>Recent Work</section>
-    <section>Contact Me</section>
-    <footer></footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Belajar Tailwind</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<section class="w-screen mx-auto px-4">
+			<nav class="flex flex-wrap p-6 justify-between">
+				<div class="flex flex-shrink-0 mr-6">
+					<img
+						src="../src/assets/logo-codepolitan.png"
+						class="h-10 w-50 mr-2"
+						alt="Logo Codepolitan"
+					/>
+				</div>
+				<div class="block lg:hidden">
+					<a href="#" class="flex items-center px-3 py-2 rounded border border-indigo-400 text-indigo-500 hover:text-indigo-700 hover:border-indigo-700">
+						<svg
+							class="fill-current h-3 w-3"
+							viewBox="0 0 20 20"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<title>Menu</title>
+							<path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+						</svg>
+					</a>
+				</div>
+				<div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+					<div class="text-sm lg:flex-grow">
+						<a
+							href="#about"
+							class="block mt-4 lg:inline-block lg:mt-0 text-gray-600 hover:text-gray-900 text-lg mr-4"
+							>About Me</a
+						>
+						<a
+							href="#recent"
+							class="block mt-4 lg:inline-block lg:mt-0 text-gray-600 hover:text-gray-900 text-lg mr-4"
+							>Recent Work</a
+						>
+						<a
+							href="#skill"
+							class="block mt-4 lg:inline-block lg:mt-0 text-gray-600 hover:text-gray-900 text-lg mr-4"
+							>Framework Skill</a
+						>
+						<a
+							href="#contact"
+							class="block mt-4 lg:inline-block lg:mt-0 text-gray-600 hover:text-gray-900 text-lg mr-4"
+							>Contact&nbsp;Me</a
+						>
+					</div>
+				</div>
+				<div>
+					<a
+						href="#"
+						class="inline-block text-sm px-4 py-2 rounded text-gray-600 border border-gray-600 hover:border-transparent hover:text-white hover:bg-indigo-700 mt-4 lg:mt-0"
+						>Button 1</a
+					>
+				</div>
+			</nav>
+		</section>
+		<section id="about" class="w-screen mx-auto py-4 bg-indigo-700 section-gradient">
+            <div class="px-16 py-8">
+                <h1 class="w-full text-5xl font-bold text-center text-white">About Me</h1>
+                <div class="mb-4">
+                    <div class="bg-pink-500 w-2/3 md:w-1/6 opacity-75 rounded h-1 mx-auto"></div>
+                </div>
+                <h2 class="text-3xl font-bold mb-2 text-white text-center">Hai, Saya Nurul. Senang berjumpa dengan Anda.</h2>
+                <h3 class="text-lg mb-2 text-white text-center">Saya seorang front-end developer. Saya membuat tampilan website dan aplikasi dengan bahasa pemrograman, sesuai dengan kebutuhan user.</h3>
+                <div class="w-full">
+                    <div class="px-4 py-4">
+                        <img src="../src/assets/profilepic.jpg" class="shadow-lg rounded-full max-w-full mx-auto text-center w-48" alt="Foto Profil">
+                    </div>
+                </div>
+            </div>
+		</section>
+		<section id="skill" class="w-screen mx-auto py-4 bg-white h-32">Framework Skill</section>
+		<section
+			id="recent"
+			class="w-screen mx-auto py-4 bg-gray-300 h-32 text-indigo-900 lg:text-green-700"
+		>
+			Recent Work
+		</section>
+		<section id="contact" class="w-screen mx-auto py-4 bg-indigo-700 h-32">Contact Me</section>
+		<footer class="w-screen mx-auto py-4 bg-white h-32">Footer</footer>
+	</body>
 </html>
