fix(toDoList): add submitting form by pressing enter functionality and prevent confirmEdit() when form is empty

--- a/frontend-assignments/02-ToDoList/toDoList.html
+++ b/frontend-assignments/02-ToDoList/toDoList.html
@@ -11,7 +11,7 @@
 <body>
     <div id="todolist-container">
         <h1>Aplikasi Todo&nbsp;List</h1>
-        <form>
+        <form id="todo-form">
             <input id="todolist-input" type="text" name="todo" placeholder="Tambahkan todo baru...">
             <button id="btn-edit-cancel" type="button" class="active hide" aria-label="cancel edit"><i class="fas fa-x" aria-hidden="true"></i></button>
             <button id="btn-edit-confirm" type="button" class="active hide" aria-label="confirm edit"><i class="fas fa-check" aria-hidden="true"></i></button>
