--- a/advanced-frontend-lessons/tailwind-css/public/portfolio.html
+++ b/advanced-frontend-lessons/tailwind-css/public/portfolio.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Web portofolio tailwind" />
+		<meta name="keyword" content="tailwindcss, CSS, tailwind" />
+		<meta name="author" content="codepolitan" />
 		<title>Belajar Tailwind</title>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" />
 		<link rel="stylesheet" href="style.css" />
 		<style>
 			.section-gradient {
@@ -90,6 +94,71 @@
 							class="shadow-lg rounded-full max-w-full mx-auto text-center w-48"
 							alt="Foto Profil"
 						/>
+					</div>
+				</div>
+			</div>
+			<div class="grid grid-cols-1 md:grid-cols-3 bg-white px-4 py-4 md:py-8 md:px-8 m-16 rounded-lg">
+				<div class="max-w-sm shadow-lg px-4 py-4 m-3 text-center">
+					<i class="fas fa-laptop-code fa-5x text-blue-500 mb-6"></i>
+					<div class="p-4 text-gray-600">
+						<p class="font-bold text-lg md:text-xl mb-6 text-black">Programming</p>
+						<p class="text-base mb-2">PHP</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">.NET</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">C++</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">Java</p>
+						<hr class="mb-2" />
+					</div>
+					<div class="px-2 py-4">
+						<button
+							class="bg-blue-500 md:bg-red-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tl-lg rounded-br-lg"
+						>
+							Lihat Portofolio
+						</button>
+					</div>
+				</div>
+				<div class="max-w-sm shadow-lg px-4 py-4 m-3 text-center">
+					<i class="fas fa-pencil-ruler text-red-500 fa-5x mb-6"></i>
+					<div class="p-4 text-gray-600">
+						<p class="font-bold text-lg md:text-xl mb-6 text-black">Design</p>
+						<p class="text-base mb-2">CSS</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">Logo</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">Mobile</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">UI</p>
+						<hr class="mb-2" />
+					</div>
+					<div class="px-2 py-4">
+						<button
+							class="bg-blue-500 md:bg-red-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tl-lg rounded-br-lg"
+						>
+							Lihat PortFolio
+						</button>
+					</div>
+				</div>
+				<div class="max-w-sm shadow-lg px-4 py-4 m-3 text-center">
+					<i class="fas fa-database text-green-500 fa-5x mb-6"></i>
+					<div class="p-4 text-gray-600">
+						<p class="font-bold text-lg md:text-xl mb-6 text-black">Database</p>
+						<p class="text-base mb-2">MySQL</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">SQL Server</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">Oracle</p>
+						<hr class="mb-2" />
+						<p class="text-base mb-2">PostgreSQL</p>
+						<hr class="mb-2" />
+					</div>
+					<div class="px-2 py-4">
+						<button
+							class="bg-blue-500 md:bg-red-500 hover:bg-blue-700 text-white font-bold px-4 py-2 shadow-md rounded-tl-lg rounded-br-lg"
+						>
+							Lihat PortFolio
+						</button>
 					</div>
 				</div>
 			</div>
